[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/enemies/edwin/edwin.png" type="Texture" id=1]
[ext_resource path="res://scripts/edwin.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/arrow.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 20 )

[node name="Edwin" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -4, 0 )
shape = SubResource( 1 )

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
visible = false
position = Vector2( -4, 0 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.66

[node name="ArrowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="HitZone" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
